Take_Redis_p3
